<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/number1"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/number2"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/addButton"
            android:text="@string/addition_text"
            android:backgroundTint="@color/lightblue"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/subButton"
            android:text="@string/subtraction_text"
            android:backgroundTint="@color/lightblue"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/multButton"
            android:text="@string/multiple_text"
            android:backgroundTint="@color/lightblue"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/divButton"
            android:text="@string/divide_text"
            android:backgroundTint="@color/lightblue"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/answerText"
        android:text="@string/answer_text"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/resetButton"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightblue"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_calculator" />


</LinearLayout>